packages/webassemblyjs/test/fixtures/type-errors/call-wrong-params-2/module.wast
(module 
  (func (param i32) (param f32))
  (func
    (call 0)
  )
)
